-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    4.0b4

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2010 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 4.0b4
-------------------

6/25/10
    - Added makeJac().
    - Modified makeYbus() to allow for single MATPOWER case struct as input.

6/1/10
    - Added modcost() and tests for modcost() and totcost().


Changes since 4.0b3
-------------------

5/21/10
    - Released version 4.0b4.

5/18/10
    - Added support for the IPOPT interior point optimizer for
      large scale non-linear optimization. Use OPF_ALG = 580
      and OPF_ALG_DC = 400 for AC and DC OPF, respectively. Requires
      the Matlab MEX interface for IPOPT, available from
      https://projects.coin-or.org/Ipopt/.
    
5/13/10
    - Modified input args for Hessian evaluation function for MIPS.
      Requires cost_mult as 3rd argument.
    - Added check for invalid gencost MODEL in opf_setup().

5/5/10
    - Added RETURN_RAW_DER option to control when OPF solver returns
      constraint, Jacobian and objective function gradient and Hessian
      information.

5/4/10
    - Refactored portions of opf() into opf_setup() and opf_execute().


Changes since 4.0b2
-------------------

4/19/10
    - Released version 4.0b3.
    - Changed licensing to GNU General Public license. See LICENSE and
      COPYING files for details.
    - Added in extras sub-directory psse2matpower Perl script for
      converting PSS/E data files to MATPOWER case files.

4/6/10
    - Added 'anon_fcns' to have_fcn() to check for anonymous function
      capability to avoid direct MATLAB version checks in code.
    - GNU Octave compatibility!  (tested with Octave 3.2.3)
      Added 'octave' to have_fcn() to check when code is running under
      Octave instead of MATLAB.

3/23/09